# dev-learn

./: hello.c  tmp-cpick-file
amd/opencl/opencl-programming-guide/: Makefile  ex-code-1.c  ex-get-platform-info.c
build-tools/Makefile-tutorial/phony/: Makefile  README.TXT  clean
build-tools/bazel-tutorial/stage1/: build.sh
build-tools/cmake-tutorial-2/: README.txt
build-tools/cmake-tutorial-2/src/: CMakeLists.txt  myapp.c  mylibrary.c  mylibrary.h
build-tools/cmake-tutorial/Tutorial/: CMakeLists.txt  Tutorial.cxx
build-tools/cmake-tutorial/Tutorial-2/: CMakeLists.txt  tutorial.cxx
build-tools/cmake-tutorial/Tutorial-new/: CMakeLists.txt  tutorial.cxx
build-tools/cmake-tutorial/Tutorial-new/MathFunctions/: CMakeLists.txt  MakeTable.cxx  MathFunctions.h  mysqrt.cxx
build-tools/cmake-tutorial/Tutorial-redo/: CMakeLists.txt  CMakeLists.txt.bak  cmake_install.cmake
buildtool/: configure.ac
c/: Makefile  linkedlist.c  node.c  node.h  tree.c
c.concurrency/: race-condition.c
c.concurrency/yield-example/: main.c
c/asm-c-linkage/: build.sh  build1.sh  config-target-vm.sh  file.c  file.h  hello.asm  int10.asm  wiki.txt
c/cast-type-adv/: build.sh  dynamic-cast.cpp
c/code-examples/: typeof.c  zero-pointer-deref.c
c/create-deb/: README.txt  create.sh
c/create-deb-meta-pkg/: build-meta.sh
c/create-deb/proj1/: build.sh  hello.c  hello.py
c/dynamic-library/: CMakeFiles.txt  CMakeLists.txt  Makefile  build.sh  build_static.sh  clean.sh  libfile1.c  libfile2.c  libfile3.c  test.c  testConfig.h.in
c/dynamic-library/example2/: build.sh  demo.c  preload.c
c/dynamic-library/pic-analysis/: build.sh
c/enum/: main.c
c/tmp/: enum-example.c
cmake-tutorial/Tutorial/: CMakeLists.txt  README.md  build.sh  clean.sh  tutorial.cxx
cmake-tutorial/Tutorial/MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.cxx
cpp/: L12-binary-op.cpp  L12-mystring-op-overload.cpp  L12-unary-op.cpp  L14-template-class.cpp  L14-template-function.cpp  L15-stl.cpp  L21-functor.cpp  L21-unary-predicate.cpp  L26-sPtr.cpp  L26-smrt-ptr-deepcopy.cpp  L8-const-pointer.cpp  class.cpp  destructor-1.cpp  destructor.cpp  globalvar.cpp  inheritance-1.cpp  inheritance-2.cpp  inheritance-multiple.cpp  inheritance.cpp  polymorphism-1.cpp  polymorphism.cpp  static.cpp
cpp-data-struct/: Makefile  c1.cpp  c1.h  p31-copy-move-assign.cpp  p31-copy-move-const.cpp
cpp.concurrency/: CH2-2-1-1-Launch-thread.cpp  CH3-2-1-deliberate-lock.cpp  CH3-2-1-mutex.cpp  hello-multi.cpp  hello.cpp  race-check.py
cpp.concurrency/incomplete_code/: CH3-list-3-7-p51-lock-hie.cpp  CH3-list-3-8-p52-simple-hierarchical-mutex.cpp  CH4-4-4-thread-safe-queue.cpp  CH4-list-4-1-waiting-4-data-cond-var.cpp
cpp/const/: const-1.cpp
cpp/misc_topics/: static_in_class.cpp
cpp/misc_topics/linkage_exp/: animals.cpp  animals.h  animals.h.gch  feed.cpp  wash.cpp
cpp/pointer-ref-game/: ptr-ref.cpp
cpp/smart-pointer/: build.sh  shared-ptr.cpp  unique-ptr.cpp
cuda/linux/cudnn/: cublas-example1.cu
cuda/linux/test/: test.cu
cuda/windows/p25/: p25.sln
cuda/windows/p31/: p31.sln
cuda/windows/p61/: p61.sdf  p61.sln
cuda/windows/p69/: p69.sln
cuda/windows/p71/: p71.sln
cuda/windows/p99/: p99.sln
cuda/windows/test/: test.sln
device-drivers/: Makefile  dkms.conf  dkms.sh  hello.c  main.c  makefile
device-drivers/src/: Makefile  main.c  scull.h  scull_load
fkgoog/googletest/myproject/: CMakeLists.txt
gpu/cuda/linux/cuda-c-programming/: CMakeLists.txt  build-125.sh  build.sh  clean.sh  cuda.prop.out  ncu.sh  p100.cu  p107.cu  p112.cu  p115.cu  p125.cu  p129.cu  p129.out  p165.cu  p18.cu  p33.cu  p45.cu  p51.cu  p55.cu  p58.cu  p84.cu  readme.md  run-p100.sh  run-p125.sh  run-p129.sh  run-p84.sh
gpu/onnx/: keras-to-onnx.py  pytorch-to-tf.py
gpu/onnx/pt-to-tf/: onnx-to-tf.py  pytorch-to-onnx.py
gpu/opencl/: ex-code-1.c
gpu/opencl/cuda-conversion/: p188.c  p41.c
gpu/opencl/opencl11-book/: p284.cpp  readme.txt
gpu/pytorch/autograd/: 1.py  1_autograd.py  README.md
gpu/pytorch/port-effort-from-tflow-2nd/: fashion-mnist-example-4.py  flower.py  p297-load.py  p297.py  p308.py  p461.py
gpu/pytorch/tutorial/: pytorch-main.py
gtest/: Makefile  main.c
health/: generate-itemized-figures.py
jira/: jira-access-pilot.py  jira-access-setup.py
jira-python/: common.py  compliance_check.py  jira-python-localconnect.py  jira-python-tutorial-example.py
jira-python/atlassian-python-api-pypi/: json-test.py
llvm/: a.out  build.sh  clean.sh  hello  hello.bc  hello.s
make/: Makefile  build.sh  main.c
ml/: grid-search.py  matplotlib-test-run.py  mclass-metrics.py  ml-iris.py  p30-forge-datasets.py  p59-linear-model.py  panda-plot.py
ml-tflow-web-tutorial/: tflow-kera.py
ml-ubuntu/neural-network/: feedforward.py
ml-ubuntu/pytorch/: quickstart.py
ml-ubuntu/tensorflow/: example-1.py  ml-skigit-with-tflow-p21.py  ml-skigit-with-tflow-p234.py  ml-skigit-with-tflow-p44.py
ml/code-samples/: p42-knn-regressor.py  p53-lasso-regression.py
opengl/project1/: project1.sln
python/: argparse-ex-10.py  argparse-ex-9.py  argparse-ex.py  logger-ex.py  pydoc_ex.py
python/pypi/: README.txt
python/python3-converter/: python3-print-convert.py
python3/: test3.py
python5/: test5.py
rocm/: ROCm-install.sh  rocm-install-1.sh  rocm-source.sh
rocm/hipcc-code/: square.cpp
rocm/opencl/opencl-programming-guide/cuda-conversion/: CMakeLists.txt  Makefile  build.sh  buildkernel.sh  p188.c  p189.c  p25-cuda.c  p25k.c  p31.c  p41-RGP.c  p41.c
rocm/opencl/opencl-programming-guide/opencl11-book/: CMakeLists.txt  HelloWorld.cl  Makefile  build.sh  p242.cpp  p46.cpp
rocm/xgemm/: PerfoGemm_GPU_0.csv  find_max_xgemm_score.py
shell/: test
vulkan/vulkantest/: CMakeLists.txt  Makefile  Makefile.bak  vulkanTutorial-commandPool.cpp  vulkanTutorial-frameBuffer.cpp  vulkanTutorial-logical-dev.cpp  vulkanTutorial-p41.cpp  vulkanTutorial-phys-dev.cpp  vulkanTutorial-pipeline.cpp  vulkanTutorial-present.cpp  vulkanTutorial-renderpass.cpp  vulkanTutorial-swapchain.cpp  vulkanTutorial-validation-layer.cpp
(+182 files in other folders)
