cmake_minimum_required(VERSION 3.10)
set(ROCMOPENCL /opt/rocm/opencl/)
message( "ROCM library path:" ${ROCMOPENCL} )
#add_subdirectory(${ROCMOPENCL}/lib/ build)

SET(P25_CUDA p25-cuda)
SET(P189 p189)
SET(P41 p41) 
SET(EXCODE_CODE_1 ex-code-1)

foreach(var ${P25_CUDA} ${P189} ${P41} ${EXCODE_CODE_1})
	message(STATUS "Generating makefile for ${var}")
	project(${var})
	add_executable(${var} ${var}.c)
	project(${var})
	add_executable(${var}.out ${var}.c)
	target_link_libraries(${var} PUBLIC ${ROCMOPENCL}/lib/libOpenCL.so)
	target_include_directories(${var} PUBLIC ${ROCMOPENCL}/include)
endforeach()
