cmake_minimum_required(VERSION 3.10)
set(ROCMOPENCL /opt/rocm/opencl/)
message( "ROCM library path:" ${ROCMOPENCL} )
#add_subdirectory(${ROCMOPENCL}/lib/ build)

foreach(var p25 p31 p189 p41 ex-code-1)
	message(STATUS "Generating makefile for ${var}")
	project(${var})
	add_executable(${var} ${var}.c)
	project(${var})
	add_executable(${var}.out ${var}.c)
	target_link_libraries(${var} PUBLIC ${ROCMOPENCL}/lib/libOpenCL.so)
	target_include_directories(${var} PUBLIC ${ROCMOPENCL}/include)
endforeach()
