cmake_minimum_required(VERSION 3.10)
set(ROCMOPENCL /opt/rocm/opencl/)
set(CMAKE_C_COMPILER /opt/rocm-4.3.0/llvm//bin//clang)
set(CMAKE_CXX_COMPILER /opt/rocm-4.3.0/llvm//bin//clang++)
#set(CMAKE_CXX_FLAGS -emi-llvm)
set(CMAKE_CXX_FLAGS)
message( "ROCM library path:" ${ROCMOPENCL} )
#add_subdirectory(${ROCMOPENCL}/lib/ build)

foreach(var p46)
        message(STATUS "Generating makefile for ${var}")
        project(${var})
        add_executable(${var} ${var}.cpp)
        project(${var})
        add_executable(${var}.out ${var}.cpp)
        target_link_libraries(${var} PUBLIC ${ROCMOPENCL}/lib/libOpenCL.so)
        target_include_directories(${var} PUBLIC ${ROCMOPENCL}/include)
endforeach()

